# EECS590-RL-Capstone

./: README.md  pyproject.toml  requirements.txt  technical-challenges.md
classical/: nav_env.py  sarsa_lambda.py
highground/engine/: __init__.py  combat.py  game_state.py  grid.py  pathfinding.py  units.py
highground/env/: __init__.py  sb3_wrapper.py  srpg_env.py
highground/llm/: __init__.py  models.py  narrator.py  strategy_manager.py  tactical_navigator.py  tile_index.py  wrapper.py
highground/llm/prompts/: flank_south.txt  hold_the_hill.txt  rush_enemy.txt  split_focus.txt  system_base.txt
highground/maps/: __init__.py  static_maps.py
highground/metrics/: __init__.py  terrain_exploit.py
highground/training/: __init__.py  benchmarl_adapter.py  benchmarl_task.py  benchmarl_train.py  cnn_model.py  train.py
highground/viz/: __init__.py  model_analysis.py  render_map.py  replay.py
models/: mappo_phase7_policy.pt
scripts/: run_analysis.py  run_sarsa.py  smoke_test_viewer.py  train_mappo.py
src/environments/: agents.py  parallel_gridworld_v1.py
tests/: test_engine.py  test_env.py
